# TinyPython

./: .gitignore  .gitmodules  LICENSE  README.md
Doc/: conf.tpy
Grammar/: Grammar
Include/: Python-ast.h  Python.h  ceval.h  datetime.h  import.h  object.h  py_curses.h  pystate.h  sliceobject.h  token.h  weakrefobject.h
Lib/: BaseHTTPServer.tpy  Bastion.tpy  CGIHTTPServer.tpy  ConfigParser.tpy  Cookie.tpy  DocXMLRPCServer.tpy  HTMLParser.tpy  MimeWriter.tpy  Queue.tpy  SimpleHTTPServer.tpy  SimpleXMLRPCServer.tpy  SocketServer.tpy  StringIO.tpy  UserDict.tpy  UserList.tpy  UserString.tpy  _LWPCookieJar.tpy  _MozillaCookieJar.tpy  __future__.tpy  _abcoll.tpy  _osx_support.tpy  _pyio.tpy  _strptime.tpy  _threading_local.tpy  _weakrefset.tpy  abc.tpy  aifc.tpy  antigravity.tpy  anydbm.tpy  argparse.tpy  ast.tpy  asynchat.tpy  asyncore.tpy  atexit.tpy  audiodev.tpy  base64.tpy  bdb.tpy  binhex.tpy  bisect.tpy  cProfile.tpy  (+164 more)
Misc/: HISTORY
Modules/: _bisectmodule.c  _codecsmodule.c  _functoolsmodule.c  _localemodule.c  _sre.c  _struct.c  _weakref.c  arraymodule.c  cPickle.c  cStringIO.c  cstubs  gcmodule.c  itertoolsmodule.c  operator.c  posixmodule.c  signalmodule.c  stropmodule.c  xxmodule.c  xxsubtype.c
Objects/: abstract.c  boolobject.c  bytearrayobject.c  classobject.c  codeobject.c  complexobject.c  descrobject.c  dictobject.c  enumobject.c  exceptions.c  fileobject.c  floatobject.c  frameobject.c  funcobject.c  genobject.c  intobject.c  listobject.c  longobject.c  memoryobject.c  methodobject.c  moduleobject.c  object.c  setobject.c  sliceobject.c  stringobject.c  structseq.c  typeobject.c  unicodeobject.c  unicodetype_db.h  weakrefobject.c
OmittedPyElements/: README.md
PC/: _msi.c  _subprocess.c  _winreg.c  config.c  dl_nt.c  getpathp.c  msvcrtmodule.c  pyconfig.h  python_exe.aps  python_nt.rc  pythonnt_rc.h  (+1 more)
Parser/: CMakeLists.txt  bitset.c  firstsets.c  grammar.c  grammar1.c  listnode.c  metagrammar.c  myreadline.c  node.c  parser.c  parsetok.c  printgrammar.c  tokenizer.c  tokenizer.h
ParserGenerator/: CMakeLists.txt  pgenheaders.h
(+1185 files in other folders)
